changed slideshow.css to ensure image is not stretched on laptop screens

--- a/src/styles/Slideshow.css
+++ b/src/styles/Slideshow.css
@@ -8,8 +8,8 @@
 .slide {
     width: 100%;
     height: 100%;
-    background-size: cover;
-    background-position: center;
+    object-fit: cover;
+    object-position: center;
     opacity: 0;
     position: absolute;
     transition: opacity 1s;
